<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">ESB</string>
    <string name="addProcedure"><u>Add Procedure</u></string>
    <string name="newSurgeonName"><u>Register New Surgeon</u></string>
    <string-array name="WardName">
        <item>(1A) OBSTETRICS  3</item>
        <item>(1B) OBSTETRICS  2</item>
        <item>(1J) PSYCHIATRIC FEMALE</item>
        <item>(1K) PSYCHIATRIC MALE</item>
        <item>(2A) GYNAECOLOGY  1</item>
        <item>(2B) GYNAECOLOGY  2</item>
        <item>(2C) BONE MARROW TRANSPLANT WARD</item>
        <item>(4A) PEDIATRICS  1</item>
        <item>(4D) PEDIATRICS  4</item>
        <item>(4E) PEDIATRICS</item>
        <item>(4F) ORTHOPAEDICS MALE </item>
        <item>(4G) TRAUMA WARD </item>
        <item>(4H) ORTHOPAEDICS FEMALE</item>
        <item>(4J) SPINAL WARD </item>
        <item>(4K) PEDIATRICS  3</item>
        <item>(5B) SURGERY  1: Male</item>
        <item>(5C) SURGERY  2: Female</item>
        <item>(5D) SURGERY  3: Urology (M+F)</item>
        <item>(5E) SURGERY  4: Neurosurgery (M+F)</item>
        <item>(5F) SURGERY  5: Ophthalmology (M+F)</item>
        <item>(5G) SURGERY 8</item>
        <item>(5H) SURGERY 7 : ENT/Plastic/Maxillofacial (M+F)</item>
        <item>(5J) SURGERY 6</item>
        <item>(6B) MEDICAL  1: Cardiology and General Med</item>
        <item>(6E) MEDICAL  2: Respiratory and General Med</item>
        <item>(6F) MEDICAL  3: Nephrology</item>
        <item>(6G) MEDICAL  4: Hematology</item>
        <item>(6H) MEDICAL  5: Neurology, Gastroentrology and General Med</item>
        <item>(6J) MEDICAL  6:  Endocrinnology, Rheumatology, Dermatology and General Med</item>
        <item>(7C) MEDICAL 7</item>
        <item>ACUTE ADMISSION UNIT</item>
        <item>BURN CARE UNIT</item>
        <item>CARDIOLOGY CARE UNIT</item>
        <item>CARDIOTHORACIC INTENSIVE CARE UNIT</item>
        <item>CORONARY REHABILITATION WARD</item>
        <item>DAY CARE OPHTHALMOLOGY</item>
        <item>GENERAL INTENSIVE CARE UNIT</item>
        <item>HIGH DEPENDENCY PAEDIATRICS</item>
        <item>HIGH DEPENDENCY UNIT</item>
        <item>HIGH DEPENDENCY WARD</item>
        <item>NEONATAL INTENSIVE CARE UNIT</item>
        <item>OBSTETRIK HDU</item>
        <item>ONCOLOGY</item>
        <item>PEDIATRICS INTENSIVE CARE UNIT</item>
        <item>POST ANAESTHESIA CARE UNIT</item>
        <item>PSIKIATRI HDU</item>
        <item>PUSAT JAGAAN HARIAN COROS</item>
        <item>PUSAT JAGAAN HARIAN GINEKOLOGI</item>
        <item>PUSAT JAGAAN HARIAN TOV</item>
        <item>PUSAT SURGERI HARIAN</item>
        <item>RENAL INTENSIVE CARE UNIT (RICU)</item>
        <item>STROKE CARE UNIT</item>
        <item>WAD GINE ONKOLOGI</item>
        <item>WAD LOUNGE</item>
        <item>WAD PAKAR KHAS (BALDU)</item>
        <item>WAD PAKAR KHAS (KRISTAL)</item>
        <item>WAD PAKAR KHAS (SONGKET)</item>
        <item>WAD PAKAR KHAS (SUTERA)</item>
        <item>WAD PEDIATRIK 2 (DAYCARE THALASEMIA)</item>
        <item>WAD PEMERHATIAN JABATAN PERUBATAN KECEMASAN</item>
        <item>WAD VIRTUAL</item>
        <item>WAD WARGA</item>
    </string-array>
    <string-array name="status">
        <item>Approved</item>
        <item>Not Approved</item>
    </string-array>
    <string-array name="surgeryDuration">
        <item>0000</item>
        <item>0060</item>
        <item>0120</item>
        <item>0180</item>
        <item>0240</item>
        <item>0300</item>
        <item>0360</item>
        <item>0420</item>
        <item>0480</item>
        <item>0540</item>
        <item>6000</item>
    </string-array>
    <string-array name="Category">
        <item></item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
    </string-array>
    <string-array name="score">
        <item>0</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
    </string-array>
    <string name="col1">Categories</string>
    <string name="col2">Clinical Descriptor</string>
    <string name="col3">Time Frame</string>
    <string name="row1a">A</string>
    <string name="row1b" translatable="false">Loss of life or loss of limb, shocked or moribund. Time frame: less than 1 hour.</string>
    <string name="row2a">B</string>
    <string name="row2b">Physiologically stable but there is immediate risk to organ survival or systemic decompensation or the surgical problem may undergo significant deterioration if left untreated. Time frame: less than 4 hours.</string>
    <string name="row3a">C</string>
    <string name="row3b">Stable but the surgical problem may undergo significant deterioration if left untreated. Time frame: less than 24 hours.</string>
    <string name="row4a">D</string>
    <string name="row4b">Non critical: Patient is admitted to hospital as an inpatient and scheduled for emergency surgery within 10 days. Time frame: less than 10 days.</string>
    <string name="row5a">E</string>
    <string name="row5b">Non critical: Patient is sent home to return for scheduled emergency surgery within 10 days.</string>
</resources>